# myStorage-public

./: .dockerignore  .env.example  .gitignore  .mise.toml  AI_SETUP.md  COLLECTION_EXAMPLES.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  SCRAPER_FIELDS.md  codex_context.md  docker-compose.yml  pyproject.toml
backend/: alembic.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_field_mapping_column.py  002_add_user_settings.py  003_add_is_public_to_collections.py
backend/app/: main.py
docs/: AI_SETUP.md  ARCHITECTURE.md  AUTHENTICATION.md  COLLECTION_EXAMPLES.md  DEVELOPMENT.md  README.md  SCRAPER_FIELDS.md
docs/changelog/: 2025-10-05.md  2025-10-06.md  2025-10-07.md  2025-10-08.md  2025-10-09.md  2025-10-10.md  2025-10-11.md  2025-10-12.md  2025-10-13.md  2025-10-15.md  README.md
docs/features/: ai-models.md  collections.md  field-mapping.md  pagination.md  web-scraping.md
docs/guides/: ai-setup.md  collection-examples.md  scraper-fields.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AIFieldSuggestion.tsx  BulkImportModal.tsx  CollectionModal.tsx  FieldDefinitionEditor.tsx  FieldMappingModal.tsx  ItemModal.tsx  MappingConfirmationModal.tsx  ModelSelectionModal.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useAISettings.ts
frontend/lib/: api.ts
frontend/types/: ai-models.ts
scripts/: README.md  backup_db.sh  deploy.sh  migrate.sh  reset_database.sh  restore_db.sh  test_scraper.py  update_series.py
(+64 files in other folders)
